--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	</head>
 <body>
-	
+  <ul type="circle">
+  	<li>первый пункт</li>
+  	<li>втарой пункт</li>
+  	<li>третий пункт</li>
+  </ul>
+
 </body>
 </html>
