--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	</head>
-<body>
-  <ul type="circle">
-  	<li>первый пункт</li>
-  	<li>втарой пункт</li>
-  	<li>третий пункт</li>
-  </ul>
 
-</body>
-</html>
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Document</title>
+		<link rel="stylesheet" href="table.css">
+
+	<body>
+		<table border="2" align="center" width="80%"> 
+           <tr>
+           <th>столбец</td>
+           	<th>столбец</th>
+           	<th>столбец</th>
+           </tr>
+           <tr>
+           	<td>ячейка</td>
+           	<td align="center">ячейка</td>
+           	<td>ячейка</td>
+           </tr>
+           <tr>
+           	<td>ячейка</td>
+           	<td>ячейка</td>
+           	<td>ячейка</td>
+           </tr>
+           <tr>
+           	<td>ячейка</td>
+           	<td>ячейка</td>
+           	<td>ячейка</td>
+           </tr>
+           <tr>
+           	<td>ячейка</td>
+           	<td>ячейка</td>
+           	<td>ячейка</td>
+           </tr>
+
+		</table>
+	</body>
+	</html>
